# ml-anomaly-scoring

./: main.py  pyproject.toml  run_local_test.py  run_streaming_test.py  stream_client.py  test.py
api/: app.py
baseline/: ip_behavioral_baseline.py
feature_engineering/: extractor.py
ingestion/: db_reader.py  traffic_buffer.py
models/: isolation_forest.py
scoring/: hybrid_scorer.py
training/: adaptive_trainer.py
